--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.13",
     "@chakra-ui/react": "^2.4.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -11,7 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "firebase": "^9.15.0",
-    "framer-motion": "^6.5.1",
+    "framer-motion": "^7.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
