--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,23 @@
 {
-  "dependencies": {
-    "axios": "^1.2.1",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mongoose": "^6.8.0",
-    "nodemailer": "^6.8.0"
-  },
-  "devDependencies": {
-    "dotenv": "^16.0.3",
-    "nodemon": "^2.0.20"
-  }
+    "name": "backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+      "start": "nodemon src/index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "axios": "^1.2.1",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "mongoose": "^6.8.0"
+    },
+    "devDependencies": {
+        "dotenv": "^16.0.3",
+        "nodemon": "^2.0.20"
+    }
 }
